added embed video header to articles

--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -769,4 +769,10 @@ body>footer #copyright {
     }
 }
 
-
+div.embedVideo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background:black;
+    padding:1em 0;
+}
