fix: add width and height attributes to partner logos for improved layout consistency

--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -785,3 +785,13 @@ div.embedVideo {
     background: black;
     padding: 1em 0;
 }
+
+.sib-form-container a {
+    color: var(--primary);
+    text-decoration: underline;
+}
+
+.sib-form .input{
+    background:white;
+    color:black;
+}
