--- a/podcast/css/glaneuses.css
+++ b/podcast/css/glaneuses.css
@@ -1,102 +1,179 @@
 .title {
   color: #d14242;
 }
+
 h4.grid__item-number {
-    color: black;
+  color: black;
 }
 
 h3.grid__item-title {
-    font-size: 1.6em;
+  font-size: 1.6em;
 }
 
 .video-container {
-    overflow: hidden;
-    position: relative;
-    width:100%;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
 }
 
 .video-container::after {
-    padding-top: 56.25%;
-    display: block;
-    content: '';
+  padding-top: 56.25%;
+  display: block;
+  content: '';
 }
 
 .video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
-article .qodef-e-read-more i, .qodef-episode-link i{color:#d14242;}
+
+article .qodef-e-read-more i,
+.qodef-episode-link i {
+  color: #d14242;
+}
 
 
 .qodef-podcast-single .qodef-episode-links .qodef-e-title {
-  margin-top:2em;
+  margin-top: 2em;
 }
 
 
-.qodef-podcast-single h6{
-  margin-bottom:0.5em;
+.qodef-podcast-single h6 {
+  margin-bottom: 0.5em;
 }
 
 
-.qodef-social-icons-group img{
-  width:32px;
-  height:32px;
-  margin-right:5px;
+.qodef-social-icons-group img {
+  width: 32px;
+  height: 32px;
+  margin-right: 5px;
 }
 
 
-.qodef-podcast-single .qodef-m-player-box{
+.qodef-podcast-single .qodef-m-player-box {
   padding: 0;
   box-shadow: none;
   background-color: transparent;
-  margin-top:-99px;
+  margin-top: -99px;
 }
 
-.qodef-podcast-content-holder p{
-  font-size:1.1em;
+.qodef-podcast-content-holder p {
+  font-size: 1.1em;
 }
 
 
 .glaneuses-diffusions {
-  display:flex;
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-content: center;
-  gap:23px 13px;
+  gap: 23px 13px;
 }
 
-.glaneuses-diffusions img{
-  height:30px;
+.glaneuses-diffusions img {
+  height: 30px;
 }
 
-footer{
-  margin:3em 1em 1em 0;
-  text-align:right;
-  color:black;
+footer {
+  margin: 3em 1em 1em 0;
+  text-align: right;
+  color: black;
   font-family: monospace;
-  font-size:1.2em;
+  font-size: 1.2em;
 }
-body{
+
+body {
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
-body>header>img{
-  width:100%;
+
+body>header {
+  height: 66%;
+
 }
-body>main{
+
+body>header>img {
+  width: 100%;
+}
+
+body>main {
   max-width: 73rem;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
-.g-2{
-  display:grid;
+body>main>section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+body>main>section>iframe {
+  height: 200px;
+  max-width: 800px;
+  margin: -99px auto 0 auto;
+}
+
+body>main p {
+  margin: 10px 0;
+  line-height: 1.59em;
+}
+
+body>main>section p {
+  font-size: 1.1em;
+}
+
+body>main>hr {
+  margin: 3em auto;
+  max-width: 100px;
+  background-color: #bbb;
+  border: 0;
+  height: 1px;
+}
+
+body>footer {
+  background: none;
+  display: block;
+  text-align: center;
+}
+
+body>footer img {
+  height: auto;
+  max-width: 100%;
+}
+
+#credits {
+  width: 60%;
+  margin: 3em 0;
+  font-size: 1.1em;
+}
+
+#credits span:nth-child(even) {
+  text-align: right;
+}
+
+.slide article .categories a {
+  color: gray;
+}
+
+.slide article .card-title a {
+  color: black;
+  font-size: 1.5rem;
+  text-transform: none;
+}
+
+.slide article .card-links a {
+  display: block;
+
+}
+
+.g-2 {
+  display: grid;
   grid-template-columns: 1fr 1fr;
-  gap:0 2rem;
+  gap: 0 2rem;
 }
-.slide > article{
 
-}
+.slide>article {}
