--- a/public/assets/wejune/css/style.css
+++ b/public/assets/wejune/css/style.css
@@ -233,30 +233,6 @@ button.btn-search {
 }
 
 /* CONTENT */
-.cta {
-   font-weight: 500;
-   display: inline-block;
-   position: relative;
-   text-transform: uppercase;
-   cursor: pointer;
-}
-
-.cta,
-.cta::before {
-   transition: all 0.5s ease-in-out;
-}
-
-.cta::before {
-   content: '>';
-   display: block;
-   position: absolute;
-   right: -15px;
-}
-
-.cta:hover::before {
-   right: -22.5px;
-}
-
 span.cta-card {
    font-weight: 500;
    position: relative;
@@ -281,34 +257,6 @@ span.cta-card {
    width: 100%;
 }
 
-/* Pagination */
-#pagination {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   flex-wrap: wrap;
-}
-
-#pagination .call-to-action.precedent a.cta::before {
-   content: '<';
-   left: -25px;
-   right: initial;
-}
-
-#pagination .call-to-action.precedent a.cta:hover::before {
-   left: -35px;
-}
-
-#pagination .pages-numbers a.page-btn {
-   color: var(--bs-black);
-   padding: 2.5px 11.5px;
-}
-
-#pagination .pages-numbers a.page-btn.active,
-#pagination .pages-numbers a.page-btn:hover {
-   color: var(--bs-white);
-   background: var(--bs-primary);
-}
 
 /* BUTTONS */
 .btn-simple {
@@ -352,31 +300,6 @@ article.card:not(.slide) img:hover {
 article.card .date {
    color: var(--bs-primary);
    text-transform: uppercase;
-}
-
-article.card.listing .date-item {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: end;
-   text-align: center;
-}
-
-article.card.listing .date-item span {
-   width: 100%;
-   padding: 0.75em;
-   width: 100%;
-   font-weight: 600;
-}
-
-article.card.listing .date-item span:first-child {
-   font-size: 1.5rem;
-}
-
-article.card.listing .date-item span:last-child {
-   font-size: 1rem;
-   background: var(--bs-primary);
-   color: var(--bs-white);
 }
 
 article.card.listing .type,
@@ -470,23 +393,8 @@ small.frais {
    margin-left: 10em;
 }$/
 
-/* === AGENDA : CARD */
-#listing-agenda .title-agenda {
-   display: flex;
-   flex-wrap: wrap;
-   text-transform: uppercase;
-   font-weight: bold;
-}
+ */
 
-#listing-agenda .card .details {
-   display: flex;
-   justify-content: space-between;
-   margin-right: 20px;
-}
-
-#listing-agenda .card .details p {
-   margin: 0;
-}
 
 .fc-event-title {
    font-size: .85em;
