--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -996,20 +996,17 @@ article.event>div:last-child {
 /* Modal styling */
 .cookie-modal {
     position: fixed;
-    bottom: 0;
+    top: 50%;
     left: 50%;
     width: 100%;
     height: 90vh;
-    overflow: scroll;
     max-width: 35rem;
     /* Set a max height for the modal */
     background: #fff;
     border: 2px solid var(--primary);
-    border-bottom: 0;
-    border-radius: 1rem 1rem 0 0;
-    transform: translate(-50%, 0%);
+    transform: translate(-50%, -50%);
     /* Enable scrolling for the modal content */
-    overflow-y: auto;
+    overflow-y: scroll;
     /* Initially hidden */
     z-index: 10000;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
