add ShadowBox class to cookie modal and update backdrop styles

--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -1059,18 +1059,10 @@ html {
     overflow: scroll;
 }
 
-html:has(#backdrop.active) {
+html:has(#shadow-box-backdrop) {
     overflow: hidden;
 }
 
-#banner-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
-}
 
 body>header {
     background: var(--black);
