--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -993,23 +993,54 @@ article.event>div:last-child {
     display: block;
 }
 
-/* Modal styling */
-.cookie-modal {
+.shadow-box {
+    background: #FFF;
+    color: #000;
     position: fixed;
+
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
+
     width: 100%;
     height: 90vh;
     max-width: 35rem;
-    /* Set a max height for the modal */
+
+    z-index: 10000;
+    display: flex;
+    flex-direction: column;
+}
+
+.shadow-box header {
+    background-color: #000;
+    color: #FFF;
+}
+
+.shadow-box main {
+    overflow-y: auto;
+    padding:0.5rem;
+}
+
+.shadow-box footer {
+    background: var(--black);
+    color: var(--white);
+    padding: 1rem;
+    display: flex;
+    gap: 1rem;
+}
+.shadow-box footer [type="submit"]{
+    flex: 1 1 auto;
+}
+
+/* Modal styling */
+.cookie-modal {
     background: #fff;
     border: 2px solid var(--primary);
-    transform: translate(-50%, -50%);
-    /* Enable scrolling for the modal content */
-    overflow-y: auto;
-    /* Initially hidden */
-    z-index: 10000;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.cookie-category {
+    margin-top: 2rem;
 }
 
 .cookie-modal>h2 {
@@ -1033,9 +1064,9 @@ article.event>div:last-child {
     padding: 0;
 }
 
-.cookie-modal fieldset{
-    display:flex;
-    flex-wrap:nowrap;
+.cookie-modal fieldset {
+    display: flex;
+    flex-wrap: nowrap;
     gap: 0rem 1rem;
 }
 
