--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -536,7 +536,15 @@ article.card.listing .date-item {
 }
 
 #modalter_prorg fieldset {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin:1rem 0;
+}
+
+#modalter_prorg fieldset input {
+    order: 3;
+    flex: 1 1 100%;
 }
 
 #modalter_prorg fieldset label {
@@ -544,27 +552,11 @@ article.card.listing .date-item {
     text-transform: uppercase;
     color: var(--bs-primary);
     font-weight: bold;
-    margin-top: 1.5rem;
 }
 
 fieldset label:has(+[required])::after {
     content: " *";
     color: var(--bs-primary);
-}
-
-@media (min-width: 768px) {
-    #modalter_prorg fieldset {
-        display: grid;
-        gap: 1rem 2rem;
-        grid-template-columns: 4fr 10fr 1fr;
-        align-items: center;
-        margin-bottom: 0.5rem;
-    }
-
-    #modalter_prorg fieldset label {
-        text-align: right;
-        margin-top: initial;
-    }
 }
 
 
@@ -661,13 +653,15 @@ fieldset label:has(+[required])::after {
     position: absolute;
     top: 0;
     left: 0;
-    height: 1rem;
-    width: 1rem;
+    height: 1.3rem;
+    width: 1.3rem;
     background-color: #FFF;
     background-image: url('/public/assets/img/incognito.svg');
     background-repeat: no-repeat;
     background-position: center;
-    border-radius: 50%;
+    background-size: contain;
+
+    border-radius: 5px;
 
     /* Border for the box */
 }
@@ -1014,11 +1008,18 @@ article.event>div:last-child {
 .shadow-box header {
     background-color: #000;
     color: #FFF;
+    padding: 0.5rem;
+}
+
+.shadow-box header h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 1.5rem;
 }
 
 .shadow-box main {
     overflow-y: auto;
-    padding:0.5rem;
+    padding: 0.5rem;
 }
 
 .shadow-box footer {
@@ -1028,7 +1029,8 @@ article.event>div:last-child {
     display: flex;
     gap: 1rem;
 }
-.shadow-box footer [type="submit"]{
+
+.shadow-box footer [type="submit"] {
     flex: 1 1 auto;
 }
 
